# fastgox-api-starter

./: .gitignore  LICENSE  README.md  Taskfile.yml  go.mod  go.sum  main.go  test_db_init.go  test_mysql.go
client/: CMakeLists.txt
client/include/: nano_client.hpp  protocol.hpp  types.hpp
client/src/: main.cpp  nano_client.cpp  protocol.cpp
cmd/server/: main.go
config/: dev.yaml  mysql.yaml
docs/: docs.go  swagger.json  swagger.yaml
scripts/: update-swagger.bat  update-swagger.sh
src/: server.go
src/config/: config.go  env_utils.go  registry.go  types.go
src/core/config/: config.go
src/core/database/: config.go  db.go  errors.go  init.go  utils.go
src/core/session/: base.go  handle.go  keys.go  user.go
src/models/config/: app.go  appmarket.go  auth.go  config.go  database.go  file.go  geolocation.go  jwt.go  loan.go  ocr.go  sms.go  types.go
src/models/dto/: Character.go  auth.go  common.go  customer_dto.go  room.go  types.go  user_dto.go
src/models/entity/: ad_conversion_record.go  base.go  blacklist.go  config.go  sms_code.go  types.go  user.go  user_auth.go
src/pkg/: base.go  types.go
src/pkg/auth/: qiandun.go  types.go
src/pkg/file/: local.go  types.go
src/pkg/geolocation/: amap.go  types.go
src/pkg/market_attribution/: types.go  vivo.go  xiaomi.go
src/pkg/ocr/: aliyun.go  qiandun.go  types.go
src/pkg/sms/: aliyun.go  feigeyun.go  types.go
src/repository/: ad_conversion_record_repository.go  base_repository.go  blacklist_repository.go  sms_code_repository.go  user_auth_repository.go  user_repository .go  user_repository.go
src/router/: router.go
src/router/handle/: ad_conversion.go  auth.go  base.go  blacklist.go  (+4 more)
src/service/: user_service.go
src/services/: ad_conversion_service.go  auth_service.go  blacklist_service.go  file_service.go  sms_code_service.go  user_service.go
src/utils/: aes.go  http.go  jwt.go  order.go
templates/: error.html  index.html
(+15 files in other folders)
